fix selector for contact info font size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -460,7 +460,7 @@ main#home h1 {
   .projects {
     grid-template-columns: 1fr;
   }
-  .boxes > div {
+  .boxes div {
     font-size: 1.2em;
   }
 }
