--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -85,7 +85,7 @@
     grid-template-columns: 1fr;
   }
 
-  .boxes > div {
+  .boxes div {
     font-size: 1.2em;
   }
 }
